# rag-system

./: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/rag/: chunker.py  ingest.py  retriever.py
